# Pupfinder

./: .gitignore  README.MD  pyproject.toml
client/: map-functions.js
client/pupfinder-front/: index.html  package-lock.json  package.json
client/pupfinder-front/src/: App.vue  index.css  main.js  router.js
client/pupfinder-front/src/components/: HelloWorld.vue
client/pupfinder-front/src/components/Body/: Body.vue
client/pupfinder-front/src/components/Form/: Form.vue
client/pupfinder-front/src/components/Login/: Login.vue
client/pupfinder-front/src/components/MapComponents/: MapVisual.vue  MapVisual2.vue
client/pupfinder-front/src/components/Register/: Register.vue
client/pupfinder-front/src/store/: index.js
server/: authentication.py  main.py
server/models/: __init__.py  dog.py  owner.py  photo.py  sighting.py
server/schemas/: dogschema.py  owner.py  photo.py  sighting.py
server/static/: styles.css
server/templates/: main-map.html  map.js
